ivan's first change

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -17,8 +17,8 @@ Licensed under the Apache License, Version 2.0 (the "License");
 </head>
 <body>
   <div id="logged-out">
-    <h1>Firenotes</h1>
-    <h3>Sign in to access your notebook</h3>
+    <h1>Sizaha Garage</h1>
+    <h3>Sign in to access your garage</h3>
     <div id="firebaseui-auth-container"></div>
   </div>
 
