--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -28,10 +28,11 @@ Licensed under the Apache License, Version 2.0 (the "License");
   <div id="form">
     <form action="" method="post">
       <div class="form-group">
-        <textarea id="note-content"></textarea>
+        Device id: <input type="text" id="device-id" /><br/>
+        Device name: <input type="text" id="device-name" /><br/>
       </div>
       <div class="form-group">
-        <button id="add-note">Save note</button>
+        <button id="create-device">Create evice</button>
         <button id="sign-out">Sign out</button> 
       </div>
     </form>
