added device, app key creation

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -28,7 +28,8 @@ Licensed under the Apache License, Version 2.0 (the "License");
   <div id="form">
     <form action="" method="post">
       <div class="form-group">
-        Device id: <input type="text" id="device-id" /><br/>
+          App id: <input type="text" id="app-id" value="garage-"/><br/>
+          Device id: <input type="text" id="device-id" /><br/>
         Device name: <input type="text" id="device-name" /><br/>
       </div>
       <div class="form-group">
