--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -22,24 +22,25 @@ Licensed under the Apache License, Version 2.0 (the "License");
     <div id="firebaseui-auth-container"></div>
   </div>
 
-  <div id="logged-in">
+  <div id="logged-in" style="display:none">
     <h1>Welcome, <span id="user"></span>!</h1>
     <h3>Enter a note and save it to your personal notebook</h3>
-  <div id="form">
-    <form action="" method="post">
-      <div class="form-group">
-          App id: <input type="text" id="app-id" value="garage-"/><br/>
-          Device id: <input type="text" id="device-id" /><br/>
-        Device name: <input type="text" id="device-name" /><br/>
-      </div>
-      <div class="form-group">
-        <button id="create-device">Create evice</button>
-        <button id="sign-out">Sign out</button> 
-      </div>
-    </form>
+    <div id="form">
+      <form action="" method="post">
+        <div class="form-group">
+            App id: <input type="text" id="app-id" value="garage-"/><br/>
+            Device id: <input type="text" id="device-id" /><br/>
+          Device name: <input type="text" id="device-name" /><br/>
+        </div>
+        <div class="form-group">
+          <button id="create-device">Create device</button>
+          <button id="open-device">Open</button> 
+          <button id="sign-out">Sign out</button> 
+        </div>
+      </form>
+    </div>
   </div>
-
-  <div id="notes-container"></div>
+  <div id="devices-container"></div>
   </div>
 </body>
 </html>
